--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <meta charset="utf-8">
       <title>reconciliacion</title>
-      <link rel="stylesheet" href="/css/index.css">
+      <link rel="stylesheet" href="../css/index.css">
+
     </head>
 
     <body>
